--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-This is a repository for C# tasks.
-Tasks are grouped in separate branches.
-Task 1 code has all the other tasks stored in one place, with both requirements and links to answers.
+Task 1 - create a list to store future tasks and answers
